# ECPM

./: .env.example  .gitignore  CACHE_SYSTEM.md  CHANGELOG.md  CRITICAL_FIXES_NEEDED.md  DEPLOYMENT_STEPS.md  INDICATOR_AUDIT_REPORT.md  INDICATOR_CALCULATION_EXPLAINED.md  LICENSE  README.md  check-ecpm-status.sh  check-required-series.sh  check_series.py  debug_data.py  diagnose_training.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fix-capital-series.sh  fix-indicators-cache.sh  refresh-cache.sh  restart-backend.sh  run-ingestion.py  start-services.sh  test-all-tabs.sh  test-backend.sh  test-indicator-fixes.sh  test_computation.py  test_indicators.py  test_training_data_load.py
backend/: Dockerfile  alembic.ini  check_alignment.py  pyproject.toml  series_config.yaml  test_debt.py  test_debt_service.py  test_real_computation.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  003_io_tables.py  004_concentration_tables.py  005_add_data_source_columns.py
backend/ecpm/: __init__.py  __main__.py  cache.py  cache_manager.py  config.py  database.py  exceptions.py  main.py  pipeline.py  validation.py
backend/ecpm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/ecpm/api/: __init__.py  auth.py  cache.py  concentration.py  data.py  forecasting.py  indicators.py  methodology.py  router.py  status.py  structural.py
backend/ecpm/auth/: __init__.py  jwt.py  models.py
backend/ecpm/clients/: __init__.py  bea.py  fred.py
backend/ecpm/concentration/: __init__.py  correlation.py  metrics.py
backend/ecpm/core/: logging.py
backend/ecpm/indicators/: __init__.py  base.py  (+6 more)
backend/scripts/: refresh_cache.py
backend/tests/: conftest.py  test_api.py  test_api_forecasting.py  test_api_indicators.py  test_api_structural.py  test_backtest.py  test_bea_client.py  test_cache.py  test_concentration_correlation.py  test_crisis_index.py  test_fred_client.py  test_indicators.py  test_ingestion_pipeline.py  test_methodology_registry.py  test_models.py  test_regime_switching.py  test_stationarity.py  test_structural_bea_io.py  test_structural_departments.py  test_structural_leontief.py  test_structural_shock.py  test_svar_model.py  test_tasks.py  test_var_model.py
(+201 files in other folders)
