[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecpm"
version = "0.1.0"
description = "Economic Crisis Prediction Model - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "celery[redis]>=5.4",
    "redis[hiredis]>=5.0",
    "fredapi>=0.5",
    "beaapi>=0.0.4",
    "tenacity>=8.2",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
testpaths = ["tests"]
